--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: ci-cd
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   test:
@@ -45,6 +45,8 @@ jobs:
         run: |
           php artisan migrate --force
           php artisan test
+          # если хочешь временно пропустить Feature-тесты:
+          # php artisan test --testsuite=Unit
         env:
           DB_CONNECTION: mysql
           DB_HOST: 127.0.0.1
@@ -62,7 +64,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set image repo (lowercase)
+        run: echo "IMAGE_REPO=ghcr.io/${GITHUB_REPOSITORY_OWNER,,}/river-booking" >> $GITHUB_ENV
+
       - uses: docker/setup-buildx-action@v3
+
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -74,8 +80,8 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/YOUR_ORG/river-booking:latest
-            ghcr.io/YOUR_ORG/river-booking:${{ github.sha }}
+            ${{ env.IMAGE_REPO }}:latest
+            ${{ env.IMAGE_REPO }}:${{ github.sha }}
 
   deploy:
     needs: build-and-push
